--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,16 @@
-cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
 
 project(Template
   VERSION 0.1
   LANGUAGES CXX
 )
 
-include(FetchContent)
-
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic")
 
+include(FetchContent)
 FetchContent_Declare(fmt
   GIT_REPOSITORY https://github.com/fmtlib/fmt.git
   GIT_TAG master
@@ -22,11 +21,23 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 include(FeatureSummary)
 
-include(CodeFormat)
+# include(CodeFormat)
 
 find_package(Eigen3 REQUIRED NO_MODULE)
 
-add_executable(main main.cpp)
+add_executable(main)
+
+set(SRC_FILES
+  main.cpp
+)
+# set(HEADER_FILES
+#   header.hpp
+# )
+
+target_sources(main
+	PRIVATE ${SRC_FILES}
+	# PUBLIC ${HEADER_FILES}
+)
 target_link_libraries(main
   PUBLIC
     Eigen3::Eigen
@@ -40,7 +51,7 @@ if (CLANGFORMAT)
   add_custom_target(format
     COMMAND ${CLANGFORMAT}
     -i
-    ${SRC_FILES}
+    ${SRC_FILES} ${HEADER_FILES}
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
   )
 else()
